--- a/src/component/Feed/Feed.css
+++ b/src/component/Feed/Feed.css
@@ -1,11 +1,12 @@
-.feed{
+.feed {
     flex: 6;
-    border: 1px solid rebeccapurple;
     margin: 10px;
     padding: 10px;
 }
 
-.feed h1{
+.feed h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-bottom: 10px;
 
 }
+
