rightbar ui done

--- a/src/component/Feed/Feed.css
+++ b/src/component/Feed/Feed.css
@@ -7,6 +7,7 @@
 .feed h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-bottom: 10px;
+    font-size: 3rem;
 
 }
 
