--- a/src/component/Rightbar/Rightbar.css
+++ b/src/component/Rightbar/Rightbar.css
@@ -1,8 +1,33 @@
 .rightBar{
     flex: 3;
-    border: 1px solid saddlebrown;
-    height: 80vh;
-    overflow: hidden;
-    position: sticky;
-    top: 76px;
+    /* box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75); */
+    border-radius: 20px ;
+    background-color: #f9f9f9;
+    height: max-content;
+
+}
+.mb-3{
+    margin-bottom: 3px;
+}
+
+.rightBarbox{
+    margin: 20px;
+}
+
+.rightSubBox{
+    padding: 10px;
+    margin: 5px;
+}
+
+.rightSubBox ul{
+    list-style: none;
+}
+
+.rightSubBox ul li{
+    background-color: #e7e5e5;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
 }
