--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -59,3 +59,31 @@
     outline: none;
     font-size: 14px;
 }
+
+@media screen and (max-width:800px) {
+    .search input{
+        width: 150px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:650px) {
+.icons ul li{
+    font-size: 12px;
+}
+
+.logo{
+    font-size: 1rem;
+}
+}
+
+@media screen and (max-width:500px){
+
+    .icons ul{
+        display: none;
+    }
+    
+    .header{
+        padding: 7px;
+    }
+}
