--- a/src/component/Rightbar/Rightbar.css
+++ b/src/component/Rightbar/Rightbar.css
@@ -31,3 +31,9 @@
     padding: 10px;
     margin: 5px;
 }
+
+@media screen and (max-width:750px) {
+    .rightBar{
+        display: none;
+    }
+}
