--- a/src/component/Rightbar/Rightbar.css
+++ b/src/component/Rightbar/Rightbar.css
@@ -1,8 +1,8 @@
 .rightBar{
     flex: 3;
-    /* box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75); */
+    box-shadow: 0px 0px 35px -24px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 0px 35px -24px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 35px -24px rgba(0, 0, 0, 0.75);
     border-radius: 20px ;
     background-color: #f9f9f9;
     height: max-content;
