--- a/src/component/Sidebar/Sidebar.css
+++ b/src/component/Sidebar/Sidebar.css
@@ -6,17 +6,22 @@
     border-radius: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     font-size: 1.3rem;
     font-weight: 400;
     position: sticky;
     top: 76px;
+    
+    box-shadow: 0px 0px 35px -24px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 0px 35px -24px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 35px -24px rgba(0, 0, 0, 0.75);
 }
 
 .h3{
     font-size: 1.5rem;
     font-weight: 400;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .category ul
