--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
-    color: rgb(140, 138, 138);
+    color: rgb(95, 95, 95);
     border: 2px solid white;
     transition: all 0.3s ease-in-out;
 }
@@ -50,6 +50,27 @@
     
     padding: 5px;
 
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+   
+}
+
+.btn{
+    position: absolute;
+    background-color: #ffff;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    border: 0px solid white;
+    outline: none;
+    top: 3px;
+    right: 5px;
+    cursor: pointer;
 }
 
 .search input{
