--- a/src/component/Rightbar/Rightbar.css
+++ b/src/component/Rightbar/Rightbar.css
@@ -26,13 +26,14 @@
     list-style: none;
     height: 400px;
     overflow-y: scroll;
+    padding: 5px;
 }
 
 .rightSubBox ul li{
     background-color: #e7e5e5;
     border-radius: 10px;
     padding: 10px;
-    margin: 5px;
+    margin: 8px;
 }
 
 @media screen and (max-width:750px) {
