--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,8 @@
 body{
     scrollbar-width: thin;
     background: #ededed;
+    position: relative; 
+    width: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -27,3 +29,74 @@ body{
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+
+
+
+  /* ///// */
+
+
+#loader {
+  position: relative; 
+  width: 100%;
+  height: 100vh;
+}
+
+.wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loading{
+  width: max-content;
+}
+
+.textball {
+  color: #300871;
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 2rem;
+}
+
+.bounceball {
+  position: relative;
+  display: inline-block;
+  height: 37px;
+  width: 15px;
+  margin-right: 4px;
+}
+
+  .bounceball:before {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #2f25e6;
+    transform-origin: 50%;
+    animation: bounce 500ms alternate infinite ease;
+  
+}
+
+@keyframes bounce {
+  0% {
+    top: 30px;
+    height: 5px;
+    border-radius: 60px 60px 20px 20px;
+    transform: scaleX(2);
+  }
+  35% {
+    height: 15px;
+    border-radius: 50%;
+    transform: scaleX(1);
+  }
+  100% {
+    top: 0;
+  }
+}
+
+#root{
+  display: none;
+}
