--- a/src/component/post/Post.css
+++ b/src/component/post/Post.css
@@ -73,12 +73,18 @@
     padding: 10px;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:850px) {
     .image{
-        height: 300px;
+        height: 200px;
     }
     .text{
         font-size: 14px;
+    }
+    .title h4{
+        font-size: 14px;
+    }
+    .date{
+        font-size: 12px;
     }
 }
 @media screen and (max-width:650px) {
